It will add a link to the style.css file

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>AgriPlus</title>
+    <link rel="stylesheet" type=text/css href="style.css">
 </head>
 <body>
+    <header>
+        <p>AgriPlus</p>
+        <p>Home</p>
+        <p>About</p>
+        <p>Products</p>
+        <p>Contact Us</p>
+        <P>Login</P>
+        <button>Get Started</button>
+    </header>
+    
     
 </body>
 </html>
