--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Space+Grotesk:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Poppins:wght@300&family=Space+Grotesk:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>AgriPlus</title>
-    <link rel="stylesheet" type=text/css href="style.css">
+    <link rel="stylesheet" type=text/css href="styles.css">
 </head>
 <body>
     <header>
-        <p>AgriPlus</p>
-        <p>Home</p>
-        <p>About</p>
+        <p=Agri>AgriPlus</p>
+        <p=home>Home</p>
+        <p=about>About</p>
         <p>Products</p>
         <p>Contact Us</p>
         <P>Login</P>
