It will add a div class which I named benefits

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
          <p class="info">Buying and selling quality farm produce has never been easier.</p>
          <p>AgriPlus is here to have you started,you can order farm produce from the farmers,harvesters, and producers directly.</p>
          <button>Explore More</button>
+    </div>
+    <div class="benefits">
+        <div>
+            <p>200+</p>
+            <p>Verified Vendors</p>
+        </div>
+        <div>
+            <p>105+</p>
+            <p>Happy Customers</p>
+        </div>
+        <div>
+            <p>2000+</p>
+            <p>Nation Wide Customers</p>
+        </div>
 
     </div>
     
