It will add classes exist,categories,popular and images were also added.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,40 @@
         </div>
 
     </div>
+
+    <div class="exist">
+        <h2>Why we exist</h2>
+        <p>We are built to make your work easier.Like any online ecommerce,AgriPlus provide a great platform for farmers to reach their customers throughout the country.We have made it easier to shop from anywhere through the platform.</p>
+        <img src="/assets/Images/image 3.png" alt="image3">
+
+    </div>
+    <div class="categories">
+        <h2>Our categories of products</h2>
+        <p>We go beyond the borders to ensure you get fresh produce from the farm.Our customer satisfaction is our mission.</p>
+    </div>
+
+    <div class="popular">
+        <h2>Most Popular</h2>
+        
+        <img src="/assets/Images/Rectangle 5.png" alt="rectangle 5">
+        <p>Fresh Carrots</p>
+        <p>Kinyanjui farmers Association</p>
+        <p>Ksh.200/kg</p>
+        <img src="/assets/Images/image 4.png" alt="image4">
+        <p>Cereals</p>
+        <p>Kenya Cereals Board</p>
+        <p>Ksh.5000/bag</p>
+        <img src="/assets/Images/image 5.png" alt="image 5">
+        <p>Fresh Fish/Tilapia</p>
+        <p>Mr Otieno</p>
+        <p>Ksh.500/kg</p>
+        <img src="/assets/Images/image 6.png" alt="image 6">
+        <p>Kales/Sukuma Wiki</p>
+        <p>Njoki's Farm</p>
+        <p>Ksh.50/bunch</p>
+
+
+    </div>
     
 </body>
 </html>
