It will add the div class Newest which includes some images and paragraphs

--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
         <p>Kales/Sukuma Wiki</p>
         <p>Njoki's Farm</p>
         <p>Ksh.50/bunch</p>
+        <div class="Newest">
+            <img src="/assets/Images/Rectangle 6.png" alt="rectangle 6">
+            <p>Chicken</p>
+            <p>Wafula farm</p>
+            <p>ksh.700</p>
+            <img src="/assets/Images/Rectangle 7.png" alt="rectangle 7">
+            <p>Ahero/lr Rice</p>
+            <p>Ahero Irrigation Board</p>
+            <p>ksh.200/kg</p>
+            <img src="/assets/Images/Rectangle 8.png" alt="rectangle 8">
+            <p>Mursik</p>
+            <p>Korir Dairy Farm</p>
+            <p>ksh.200/kg</p>
+            <img src="/assets/Images/Rectangle 9.png" alt="rectangle 9">
+            <p>Fresh Tomatoes</p>
+            <p>Tz Farmers Association </p>
+            <p>ksh.5000/crate</p>
+        </div>
+        <h2>See All</h2>
+        
 
 
     </div>
