It will add the div classes of customers,Subscribe button and the footer information

--- a/index.html
+++ b/index.html
@@ -94,7 +94,59 @@
             <p>ksh.5000/crate</p>
         </div>
         <h2>See All</h2>
-        
+        <div class="customers">
+            <h2>What our Esteemed customers has to say about us</h2>
+            <div class="Rebecca">
+                <input type="radio" id="star5" name="rate" value="5" />
+                    <label for="star5" title="text">5 stars</label>
+                    <input type="radio" id="star4" name="rate" value="4" />
+                    <label for="star4" title="text">4 stars</label>
+                    <input type="radio" id="star3" name="rate" value="3" />
+                    <label for="star3" title="text">3 stars</label>
+                    <input type="radio" id="star2" name="rate" value="2" />
+                    <label for="star2" title="text">2 stars</label>
+                    <input type="radio" id="star1" name="rate" value="1" />
+                    <label for="star1" title="text">1 star</label>
+            </div>
+
+
+        </div>
+        <div>
+            <h2>We'd Like to keep in touch</h2>
+            <p>Subscribe to our newsletter</p>
+            <input type="text" id="input">
+            <button onclick="show()">Subscribe</button>
+            <p id="display"></p>
+
+        </div>
+        <div class="footer">
+            <div id="agri"></div>
+                <p>AgriPlus</p>
+                <p>Quality Farm produce throughbuying and selling</p>
+            </div>
+            <div id="company">
+                <p>Company</p>
+                <p>About</p>
+                <p>Product</p>
+                <p>Contact us</p>
+            </div>
+            <div id="products">
+                <p>Dairy</p>
+                <p>Cereals</p>
+                <p>Vegetables & Fruits</p>
+                <p><More class="more"></More></p>
+            </div>
+            <div id="Others">
+                <p>Others</p>
+                <p>FAQs</p>
+                <p>Terms of Services</p>
+                <p>Privacy and Policy</p>
+            </div>
+            <div class="rights">
+                <p>All rights reserved,terms and conditions applied </p>
+
+            </div>
+
 
 
     </div>
