--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 
         </div>
-        <div>
+        <div class="reviews">
             <h2>We'd Like to keep in touch</h2>
             <p>Subscribe to our newsletter</p>
             <input type="text" id="input">
