It will add css style property to the reviews and footer classes and also did some alterations in the html file

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="exist">
         <h2>Why we exist</h2>
-        <p>We are built to make your work easier.Like any online ecommerce,AgriPlus provide a great platform for farmers to reach their customers throughout the country.We have made it easier to shop from anywhere through the platform.</p>
+        <p id="built">We are built to make your work easier.Like any online ecommerce,AgriPlus provide a great platform for farmers to reach their customers throughout the country.We have made it easier to shop from anywhere through the platform.</p>
         <img src="/assets/Images/image 3.png" alt="image3">
 
     </div>
@@ -115,29 +115,30 @@
             <h2>We'd Like to keep in touch</h2>
             <p>Subscribe to our newsletter</p>
             <input type="text" id="input">
-            <button onclick="show()">Subscribe</button>
+            <button id="display">Subscribe</button>
             <p id="display"></p>
 
         </div>
         <div class="footer">
-            <div id="agri"></div>
-                <p>AgriPlus</p>
-                <p>Quality Farm produce throughbuying and selling</p>
+            <div>
+                <p id="agri">AgriPlus</p>
+                <p id="quality">Quality Farm produce throughbuying and selling</p>
             </div>
-            <div id="company">
-                <p>Company</p>
+            <div>
+                <p id="Company">Company</p>
                 <p>About</p>
                 <p>Product</p>
                 <p>Contact us</p>
             </div>
-            <div id="products">
+            <div>
+                <p id="products">Products</p>
                 <p>Dairy</p>
                 <p>Cereals</p>
                 <p>Vegetables & Fruits</p>
                 <p><More class="more"></More></p>
             </div>
-            <div id="Others">
-                <p>Others</p>
+            <div>
+                <p id="others">Others</p>
                 <p>FAQs</p>
                 <p>Terms of Services</p>
                 <p>Privacy and Policy</p>
@@ -145,11 +146,9 @@
             <div class="rights">
                 <p>All rights reserved,terms and conditions applied </p>
 
-            </div>
-
-
-
     </div>
+        </div>
+        
     
 </body>
 </html>
