It will add css style properties to the popular class

--- a/index.html
+++ b/index.html
@@ -58,23 +58,31 @@
 
     <div class="popular">
         <h2>Most Popular</h2>
-        
+        <div class="carrot">
         <img src="/assets/Images/Rectangle 5.png" alt="rectangle 5">
-        <p>Fresh Carrots</p>
+        <p id="fc">Fresh Carrots</p>
         <p>Kinyanjui farmers Association</p>
-        <p>Ksh.200/kg</p>
+        <p id="two">Ksh.200/kg</p>
+        </div>
+        <div class="cereals">
         <img src="/assets/Images/image 4.png" alt="image4">
-        <p>Cereals</p>
+        <p id="cl">Cereals</p>
         <p>Kenya Cereals Board</p>
-        <p>Ksh.5000/bag</p>
+        <p id="thousand">Ksh.5000/bag</p>
+        </div>
+        <div class="fish">
         <img src="/assets/Images/image 5.png" alt="image 5">
-        <p>Fresh Fish/Tilapia</p>
+        <p id="ff">Fresh Fish/Tilapia</p>
         <p>Mr Otieno</p>
-        <p>Ksh.500/kg</p>
+        <p id="hundred">Ksh.500/kg</p>
+        </div>
+        <div class="kales">
         <img src="/assets/Images/image 6.png" alt="image 6">
-        <p>Kales/Sukuma Wiki</p>
+        <p id="ks">Kales/Sukuma Wiki</p>
         <p>Njoki's Farm</p>
-        <p>Ksh.50/bunch</p>
+        <p id="fifty">Ksh.50/bunch</p>
+        </div>
+    </div>
         <div class="Newest">
             <img src="/assets/Images/Rectangle 6.png" alt="rectangle 6">
             <p>Chicken</p>
