It will add css properties to the 'Newest'class

--- a/index.html
+++ b/index.html
@@ -84,22 +84,32 @@
         </div>
     </div>
         <div class="Newest">
-            <img src="/assets/Images/Rectangle 6.png" alt="rectangle 6">
-            <p>Chicken</p>
-            <p>Wafula farm</p>
-            <p>ksh.700</p>
-            <img src="/assets/Images/Rectangle 7.png" alt="rectangle 7">
-            <p>Ahero/lr Rice</p>
-            <p>Ahero Irrigation Board</p>
-            <p>ksh.200/kg</p>
-            <img src="/assets/Images/Rectangle 8.png" alt="rectangle 8">
-            <p>Mursik</p>
-            <p>Korir Dairy Farm</p>
-            <p>ksh.200/kg</p>
-            <img src="/assets/Images/Rectangle 9.png" alt="rectangle 9">
-            <p>Fresh Tomatoes</p>
-            <p>Tz Farmers Association </p>
-            <p>ksh.5000/crate</p>
+            <div class="chicken">
+            
+                 <img src="/assets/Images/Rectangle 6.png" alt="rectangle 6">
+                 
+                 <p id="chick">Chicken</p>
+                 <p>Wafula farm</p>
+                 <p id="seven">ksh.700</p>
+            </div>
+            <div class="rice">
+                 <img src="/assets/Images/Rectangle 7.png" alt="rectangle 7">
+                 <p id="Ahero">Ahero/lr Rice</p>
+                 <p>Ahero Irrigation Board</p>
+                 <p id="r2">ksh.200/kg</p>
+            </div>
+            <div class="mursik">
+                <img src="/assets/Images/Rectangle 8.png" alt="rectangle 8">
+                 <p id="mrsk">Mursik</p>
+                 <p>Korir Dairy Farm</p>
+                 <p id="mr2">ksh.200/kg</p>
+            </div>
+            <div class="tomatoes">
+                 <img src="/assets/Images/Rectangle 9.png" alt="rectangle 9">
+                 <p id="ft">Fresh Tomatoes</p>
+                 <p>Tz Farmers Association </p>
+                 <p id="f5">ksh.5000/crate</p>
+            </div>
         </div>
         <h2>See All</h2>
         <div class="customers">
