It will style the 'benefits' class ,resize it and also aligned the heading(id=exist) to the left

--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
 </head>
 <body>
     <header>
-        <p=Agri>AgriPlus</p>
-        <p=home>Home</p>
-        <p=about>About</p>
-        <p>Products</p>
-        <p>Contact Us</p>
-        <P>Login</P>
-        <button>Get Started</button>
+        <div class="navigation">
+            <p id="plus">AgriPlus</p>
+            <p>Home</p>
+            <p>About</p>
+            <p>Products</p>
+            <p>Contact Us</p>
+            <P>Login</P>
+            <button id="start">Get Started</button>
+        </div>
     </header>
     <div class="grass">
+        <div class="fruits">
          
-         <img src="/assets/Images/image 2.png" height="100px" alt="image2">
-         <p class="info">Buying and selling quality farm produce has never been easier.</p>
+            <img src="/assets/Images/image 2.png" height="400px" alt="image2">
+        </div>
+         <h2 class="info">Buying and selling quality farm produce has never been easier.</h2>
          <p>AgriPlus is here to have you started,you can order farm produce from the farmers,harvesters, and producers directly.</p>
-         <button>Explore More</button>
+         <button id="explore">Explore More</button>
     </div>
     <div class="benefits">
         <div>
@@ -46,9 +50,11 @@
     </div>
 
     <div class="exist">
-        <h2>Why we exist</h2>
+        <h2 id="exist">Why we exist</h2>
         <p id="built">We are built to make your work easier.Like any online ecommerce,AgriPlus provide a great platform for farmers to reach their customers throughout the country.We have made it easier to shop from anywhere through the platform.</p>
+        <div class="image3">
         <img src="/assets/Images/image 3.png" alt="image3">
+        </div>
 
     </div>
     <div class="categories">
