It will modify html file and add css properties to added classes

--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
     </div>
     <div class="categories">
         <h2>Our categories of products</h2>
-        <p>We go beyond the borders to ensure you get fresh produce from the farm.Our customer satisfaction is our mission.</p>
+        <p id="beyond">We go beyond the borders to ensure you get fresh produce from the farm.Our customer satisfaction is our mission.</p>
     </div>
 
     <div class="popular">
-        <h2>Most Popular</h2>
+        <div class="pop">
+        <p>Most Popular</p>
+        </div>
         <div class="carrot">
         <img src="/assets/Images/Rectangle 5.png" alt="rectangle 5">
         <p id="fc">Fresh Carrots</p>
@@ -117,9 +119,10 @@
                  <p id="f5">ksh.5000/crate</p>
             </div>
         </div>
-        <h2>See All</h2>
+        <p id="see">See All</p>
         <div class="customers">
             <h2>What our Esteemed customers has to say about us</h2>
+        </div>
             <div class="Rebecca">
                 <input type="radio" id="star5" name="rate" value="5" />
                     <label for="star5" title="text">5 stars</label>
