It will modify class'customers',id (ratings) in html and add css properties

--- a/index.html
+++ b/index.html
@@ -121,23 +121,46 @@
         </div>
         <p id="see">See All</p>
         <div class="customers">
-            <h2>What our Esteemed customers has to say about us</h2>
+            <p>What our Esteemed customers has to say about us</p>
         </div>
+
+        <div id="ratings">
             <div class="Rebecca">
-                <input type="radio" id="star5" name="rate" value="5" />
-                    <label for="star5" title="text">5 stars</label>
-                    <input type="radio" id="star4" name="rate" value="4" />
-                    <label for="star4" title="text">4 stars</label>
-                    <input type="radio" id="star3" name="rate" value="3" />
-                    <label for="star3" title="text">3 stars</label>
-                    <input type="radio" id="star2" name="rate" value="2" />
-                    <label for="star2" title="text">2 stars</label>
-                    <input type="radio" id="star1" name="rate" value="1" />
-                    <label for="star1" title="text">1 star</label>
+                <button class="star">&#9734</button>
+                <button class="star">&#9734</button>
+                <button class="star">&#9734</button>
+                <button class="star">&#9734</button>
+                <button class="non-star">&#9734</button>
+                <p class="text">"The most efficient way to get fresh produce"</p>
+                <img src="assets/Images/Rectangle 11.png">
+                <div class="RM">Rebecca Mkulima</div>
+            </div>
+
+            <div class="John">
+                    <button class="star">&#9734</button>
+                    <button class="star">&#9734</button>
+                    <button class="star">&#9734</button>
+                    <button class="star">&#9734</button>
+                    <button class="star">&#9734</button>
+                    <p class="text">"AgriPlus is the place to market your produce"</p>
+                    <img src="/assets/Images/Rectangle 11-1.png">
+                    <div class="JJ">John Joe</div>
+            </div>
+
+            <div class="Lavinton">
+                <button class="star">&#9734</button> 
+                <button class="star">&#9734</button>
+                <button class="star">&#9734</button>
+                <button class="star">&#9734</button>
+                <button class="star">&#9734</button>
+                <p class="text">"Connecting rural to urban through business"</p>
+                <img src="./assets/Images/Rectangle 11-2.png">
+                <div class="Lavi">Lavington dwellers</div>
             </div>
 
 
         </div>
+
         <div class="reviews">
             <h2>We'd Like to keep in touch</h2>
             <p>Subscribe to our newsletter</p>
