It will add an arrow

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             </div>
         </div>
         <p id="see">See All</p>
+        <p id="arrow"> &#8594;</p>
         <div class="customers">
             <p>What our Esteemed customers has to say about us</p>
         </div>
