It will modify the README file

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 
         <div id="ratings">
             <div class="Rebecca">
+            
                 <button class="star">&#9734</button>
                 <button class="star">&#9734</button>
                 <button class="star">&#9734</button>
@@ -174,6 +175,7 @@
             <div>
                 <p id="agri">AgriPlus</p>
                 <p id="quality">Quality Farm produce throughbuying and selling</p>
+                <img src="">
             </div>
             <div>
                 <p id="Company">Company</p>
