--- a/index.html
+++ b/index.html
@@ -175,8 +175,10 @@
             <div>
                 <p id="agri">AgriPlus</p>
                 <p id="quality">Quality Farm produce throughbuying and selling</p>
+                
                 <img src="">
             </div>
+            <p id="App">Get the App</p>
             <div>
                 <p id="Company">Company</p>
                 <p>About</p>
