--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Poppins:wght@300&family=Space+Grotesk:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>AgriPlus</title>
-    <link rel="stylesheet" type=text/css href="/assets/styles.css">
+    <link rel="stylesheet" type=text/css href="/styles.css">
 </head>
 <body>
     <header>
