It will add social media images,style them in the 'media'and 'store' classes in the div footer

--- a/index.html
+++ b/index.html
@@ -177,10 +177,16 @@
             <div>
                 <p id="agri">AgriPlus</p>
                 <p id="quality">Quality Farm produce throughbuying and selling</p>
-                
-                <img src="">
+                <img class="media" src="./assets/Images/twit.jpg" alt="twitter">
+                <img class="media" src="./assets/Images/facebook.png" alt="fb">
+                <img class="media" src="./assets/Images/instagram.jpg" alt="insta">
+
+                <p id="App">Get the App</p>
+
+                <img class="store" src="./assets/Images/aps.jpg" alt="appstore">
+                <img class="store" src="./assets/Images/GP.jpg" alt="googleplay">
             </div>
-            <p id="App">Get the App</p>
+            
             <div>
                 <p id="Company">Company</p>
                 <p>About</p>
