--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         </div>
     </header>
     <div class="grass">
+        <img src="./assets/Images/image 1.png" alt="image1">
+    </div>
         <div class="fruits">
          
             <img src="./assets/Images/image 2.png" height="400px" alt="image2">
