modified the grass image

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             <button id="start">Get Started</button>
         </div>
     </header>
-    <div class="grass">
-        <img src="./assets/Images/image 1.png" alt="image1">
-    </div>
+    
         <div class="fruits">
          
             <img src="./assets/Images/image 2.png" height="400px" alt="image2">
@@ -36,6 +34,11 @@
          <h2 class="info">Buying and selling quality farm produce has never been easier.</h2>
          <p>AgriPlus is here to have you started,you can order farm produce from the farmers,harvesters, and producers directly.</p>
          <button id="explore">Explore More</button>
+    </div>
+    <div class="grass">
+        <div class="grass">
+            <!-- <img src="./assets/Images/image 1.png" alt="image1"> -->
+        </div>
     </div>
     <div class="benefits">
         <div>
